--- a/style.css
+++ b/style.css
@@ -67,13 +67,14 @@ a.AuthorLink:active {
 	color: rgba(255,255,255,0.5) !important;
 	text-shadow: 0px 0px 4px rgba(0,0,0,0.5);
 }
-.Title {
+a.Title, a.Title:visited, a.Title:hover, a.Title:active {
 	color: #bddef1;
 	text-shadow: 0px 4px 0px rgba(0,0,0,0.5);
 	font-size: 88px;
 	font-weight: bold;
 	display: inline-block;
 	vertical-align: middle;
+	text-decoration: none !important;
 }
 .SubTitleSeparator {
 	color: #72b8e1;
