--- a/style.css
+++ b/style.css
@@ -8,8 +8,11 @@ body {
 	overflow-y: scroll;
 }
 ol, ul {
-	margin: 0px;
+	margin: 2px 0px 2px 32px;
 	padding: 0px;
+}
+li + li {
+	margin-top: 2px;
 }
 ol {
 	list-style-type: decimal;
@@ -18,8 +21,8 @@ p {
 	margin: 0px;
 	padding: 0px;
 }
-p + p {
-	margin-top: 8px;
+p + p, p + div, p + ol, p + ul, ol + p, ul + p {
+	margin-top: 8px !important;
 }
 
 .Chrome {
@@ -53,6 +56,16 @@ p + p {
 .PageVariableDisplayOn {
 }
 .PageVariableDisplayOff {
+	display: none !important;
+}
+
+.Help {
+}
+.NoHelp {
+}
+.HelpDisplayOn {
+}
+.HelpDisplayOff {
 	display: none !important;
 }
 
@@ -193,10 +206,6 @@ a.NavigationLink:active {
 .ContentHeaderTitle {
 	font-weight: bold;
 }
-.ContentHeaderSeparator {
-	display: inline-block;
-	padding: 0px 6px 0px 6px;
-}
 .ContentBody {
 	color: #034063;
 	padding: 16px 0px 16px 16px;
@@ -205,21 +214,19 @@ a.NavigationLink:active {
 	padding: 16px 0px 0px 16px;
 }
 .ContentBodyInner {
-	padding: 1px 0px 0px 16px;
 }
 .ContentInstructionList {
-	margin: 2px 0px 2px 32px;
-}
-.ContentInstructionList li {
-	padding: 1px 0px 1px 0px;
-}
-.AfterInstructions {
-	padding: 8px 0px 0px 0px;
-	font-style: italic;
 }
 
 .Notice {
 	font-style: italic;
+}
+
+.Hardlink {
+}
+.HardlinkSeparator {
+	display: inline-block;
+	padding: 0px 6px 0px 6px;
 }
 
 .InfoLink {
@@ -281,3 +288,61 @@ a.InstallLink:active {
 	padding-top: 16px;
 }
 
+.ImagePreviewOverlay {
+	position: fixed;
+	left: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	background: rgba(0,0,0,0.25);
+	z-index: 10;
+	display: none;
+}
+.ImagePreviewOverlayInner {
+	position: relative;
+	text-align: center;
+	width: 100%;
+	height: 100%;
+}
+.ImagePreviewBox {
+	position: absolute;
+	display: inline-block;
+	top: 50%;
+}
+.ImagePreviewBoxInner1 {
+	position: relative;
+}
+.ImagePreviewBoxInner2 {
+	position: absolute;
+	background: #eff4f8;
+	padding: 16px;
+	box-shadow: 0px 0px 0px 4px rgba(28,123,177,0.5);
+}
+.ImagePreviewImageContainer {
+	display: block;
+	text-align: center;
+	margin-bottom: 10px;
+}
+.ImagePreviewImageContainer img {
+	display: inline-block;
+}
+.ImagePreviewDescriptionContainer {
+	display: block;
+	text-align: left;
+	max-width: 640px;
+}
+
+.ImageLink {
+}
+.ImageDescription {
+	display: none;
+}
+
+.HiddenHoverMaster {
+}
+.HiddenHover {
+	display: none;
+}
+.HiddenHoverMaster:hover .HiddenHover {
+	display: inline !important;
+}
