--- a/style.css
+++ b/style.css
@@ -59,14 +59,24 @@ p + p, p + div, p + ol, p + ul, ol + p, ul + p {
 	color: #72b8e1;
 }
 
+.ExtrasContainerPre {
+	height: 32px;
+}
 .ExtrasContainer {
 	font-size: 16px;
 	text-align: center;
 	margin-top: 8px;
+	position: fixed;
+	bottom: 0;
+	z-index: 1;
+	width: inherit;
+	background: #eff4f8;
+	box-shadow: 0px 0px 16px 16px #eff4f8;
 }
 .Extra {
 	display: inline-block;
 	margin: 0px 8px 0px 8px;
+	margin-bottom: 32px;
 }
 .Content .Extra a:link, .Content .Extra a:visited {
 	color: #97c4e7;
@@ -146,12 +156,13 @@ p + p, p + div, p + ol, p + ul, ol + p, ul + p {
 }
 
 .TitleContainer {
+	min-width: 640px;
 	text-align: center;
 	background: #1c7bb1;
 	padding: 16px 0px 32px 0px;
 	overflow: hidden;
 	position: relative;
-	z-index: 1;
+	z-index: 2;
 }
 .TitleContainerInner {
 	position: relative;
@@ -266,6 +277,7 @@ a.Version, a.Version:visited, a.Version:hover, a.Version:active {
 }
 
 .TitleBorder {
+	min-width: 640px;
 	width: 100%;
 	height: 4px;
 	background: rgba(28,123,177,0.5);
@@ -274,8 +286,10 @@ a.Version, a.Version:visited, a.Version:hover, a.Version:active {
 .ContentContainer {
 	text-align: center;
 }
-.Content {
+.ContentWidth {
 	width: 640px;
+}
+.Content {
 	display: none;
 	text-align: left;
 	font-size: 20px;
