--- a/style.css
+++ b/style.css
@@ -51,10 +51,20 @@ p + p.Separated {
 	display: none !important;
 }
 
-.FeaturesContainer {
+.FeaturesContainerOuter {
 	font-size: 16px;
 	text-align: center;
 	margin-bottom: 16px;
+	line-height: 1.5em;
+	width: 100%;
+}
+.FeaturesContainer {
+	display: block;
+	font-size: 16px;
+	text-align: center;
+	margin-bottom: 0px;
+	width: 80%;
+	display: inline-block;
 }
 .Feature {
 	display: inline-block;
@@ -135,6 +145,9 @@ p + p.Separated {
 }
 .TextIconLink {
 	background-image: url(icon_link.png);
+}
+.TextIconUpload {
+	background-image: url(icon_upload.png);
 }
 .TextIconText {
 	vertical-align: middle;
