--- a/style.css
+++ b/style.css
@@ -550,3 +550,10 @@ a.InstallLink:active {
 .SpacedList > li + li{
 	margin-top: 0.6em;
 }
+
+.Link {
+}
+.GuideLink {
+	display: block;
+	cursor: pointer;
+}
