--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ p + p.Separated {
 	text-align: center;
 	background: #1c7bb1;
 	padding: 16px 0px 32px 0px;
-	overflow: hidden;
+	/*overflow: hidden;*/
 	position: relative;
 	z-index: 2;
 }
@@ -817,3 +817,69 @@ a.InstallLink:active {
 }
 
 
+
+.NavigationImportantLinks {
+	display: inline-block;
+	position: relative;
+}
+.NavigationImportantLinksInner {
+	position: relative;
+}
+.NavigationImportantLinks.NavigationImportantLinksHidden>.NavigationImportantLinksShow {
+	display: none;
+}
+.NavigationImportantLinksShow {
+	display: block;
+	position: absolute;
+	left: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	background: transparent;
+	margin: -6px;
+}
+.NavigationImportantLinksShowShade {
+	background: rgba(0,0,0,0.75);
+}
+.NavigationImportantLinksShowTop {
+	position: absolute;
+	display: block;
+	left: -10000px;
+	right: -10000px;
+	bottom: 100%;
+	height: 10000px;
+}
+.NavigationImportantLinksShowLeft {
+	position: absolute;
+	display: block;
+	left: -10000px;
+	right: 100%;
+	top: 0;
+	bottom: -10000px;
+	text-align: right;
+}
+.NavigationImportantLinksShowBottom {
+	position: absolute;
+	display: block;
+	left: 0;
+	right: -10000px;
+	top: 100%;
+	height: 10000px;
+}
+.NavigationImportantLinksShowRight {
+	position: absolute;
+	display: block;
+	left: 100%;
+	width: 10000px;
+	top: 0;
+	bottom: 0;
+}
+.NavigationImportantLinksShowText {
+	font-variant: small-caps;
+	display: inline-block;
+	width: 640px;
+	font-size: 40px;
+	color: #ffffff;
+	margin-right: 40px;
+	text-shadow: 0px 0px 8px #000000, 0px 0px 4px #000000, 0px 0px 2px #000000;
+}
