--- a/style.css
+++ b/style.css
@@ -802,6 +802,9 @@ a.InstallLink:active {
 	color: inherit;
 	text-decoration: none;
 }
+.ReadMeFinishDisclaimer {
+	font-size: 16px;
+}
 
 .ReadMeHeaderBlocker {
 	display: none;
